[package]
name = "tinyproxy-thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
url = "2.2"
anyhow = "1.0"
dotenv = "0.15"
[dependencies.async-std]
version = "1.12"
features = ["attributes"]

[profile.release]
#opt-level = 'z'  # Optimize for size
opt-level = 3  # Optimize for size
lto = true
codegen-units = 1
#panic = 'abort'
panic = 'unwind'